--- a/trunk/administrator/language/en-GB/en-GB.com_flexicontent.ini
+++ b/trunk/administrator/language/en-GB/en-GB.com_flexicontent.ini
@@ -166,8 +166,6 @@ FLEXI_NOT_RATED_YET=Not rated yet
 FLEXI_NOTES=Note
 FLEXI_PARAMETERS_ADVANCED=Advanced parameters
 FLEXI_PLEASE_PUBLISH_PLUGIN=Please publish the FLEXIcontent fields plugins
-FLEXI_REVERT=Revert
-FLEXI_REVERT_TO_THIS_VERSION=Restore this version
 FLEXI_REVISED=Revised
 FLEXI_SCORE=Score
 FLEXI_TAKE_CARE_CHANGING_FIELD_TYPE=Please take care when changing field type. All fields values will be permanently deleted !!!
@@ -190,9 +188,6 @@ FLEXI_SUBSCRIBERS=subscribers
 FLEXI_FIELD_INVALID_QUERY=Either the query is not valid or it doesn't return any rows
 PARAMALTREADMORE=Enter the text that you want to appear alongside the dynamic <em>Read more:</em> link instead of the default setting of using the Article Title.
 PARAMKEYREF=A text key by which an Article may be referenced (e.g. a help reference)
-FLEXI_NOTHING_TO_RESTORE=Nothing to restore
-FLEXI_VERSION_RESTORED=Version %d successfully restored
-FLEXI_CONFIRM_VERSION_RESTORE=Data in the current form will be lost. Are you sure you wish to restore this version?
 
 # Types screen
 FLEXI_VIEW_FIELDS=view fields
@@ -909,6 +904,9 @@ FLEXI_CATEGORIES_NOTES=The main category will be used for permissions heritance 
 FLEXI_DATE_FORMAT_FLEXI_VERSIONS=%d/%m %H:%M
 FLEXI_CATEGORIES_MAIN=Set primary
 FLEXICONTENT_ITEM_SUBMISSION_DESC=This menu allows users to submit content in frontend. IMPORTANT! At the moment FLEXIcontent only allows you to submit standard Joomla articles (no extra-fields).
+FLEXI_REVERT=Load version
+FLEXI_REVERT_TO_THIS_VERSION=Load version #%s
+FLEXI_CONFIRM_VERSION_RESTORE=Are you sure you wish to load this version?
 
 # Added 1.5.1 stable
 FLEXI_SAVE_AND_NEW=Save & new
