--- a/trunk/administrator/language/fr-FR/fr-FR.com_flexicontent.ini
+++ b/trunk/administrator/language/fr-FR/fr-FR.com_flexicontent.ini
@@ -194,12 +194,6 @@ FLEXI_SUBSCRIBERS=abonnés
 FLEXI_FIELD_INVALID_QUERY=Soit la requête est invalide, soit elle n'a retourné aucun résultats
 PARAMALTREADMORE=Saisissez le texte que vous voulez afficher à côté du lien <em>Lire la suite :</em> au lieu du titre de l'article (par défaut).
 PARAMKEYREF=Texte clé relatif à l'article et par lequel il pourra être référencé (comme par ex. une référence à une aide)
-FLEXI_NOTHING_TO_RESTORE=Rien à restaurer
-FLEXI_VERSION_RESTORED=Version %d restaurée avec succès
-FLEXI_CONFIRM_VERSION_RESTORE=Les données de la version en cours vont être remplacées. Etes-vous certain de vouloir restaurer cette version?
-# Item screen (added 1.5 stable)
-FLEXI_SAVE_AND_NEW=Sauver & nouveau
-FLEXI_DELETE_TAG=Cliquez ici pour supprimer ce tag.
 
 # Types screen
 FLEXI_VIEW_FIELDS=voir&nbsp;les&nbsp;champs
@@ -917,6 +911,9 @@ FLEXI_CATEGORIES_NOTES=La catégorie principale est celle utilisée pour déterm
 FLEXI_DATE_FORMAT_FLEXI_VERSIONS=%d/%m %H:%M
 FLEXI_CATEGORIES_MAIN=Catégorie principale
 FLEXICONTENT_ITEM_SUBMISSION_DESC=Ce menu permet aux utilisateurs de soumettre des contenus en frontend. IMPORTANT! Actuellement FLEXIcontent ne permet de soumettre que des contenus de type articles (pas de champs custom)
+FLEXI_REVERT=Afficher la version
+FLEXI_REVERT_TO_THIS_VERSION=Charger la version #%s
+FLEXI_CONFIRM_VERSION_RESTORE=Etes-vous certain de vouloir charger cette version?
 
 # Added 1.5.1 stable
 FLEXI_SAVE_AND_NEW=Sauver & nouveau
