--- a/administrator/language/en-GB/en-GB.com_flexicontent.ini
+++ b/administrator/language/en-GB/en-GB.com_flexicontent.ini
@@ -902,6 +902,7 @@ FLEXI_RIGHTS_MANAGEMENT=Manage permissions
 FLEXI_RIGHTS_MANAGEMENT_DESC=Click on the arrow above to view the permissions table.
 FLEXI_CATEGORIES_NOTES=The main category will be used for permissions heritance and url rewriting. To select multiple categories, press down and hold the CTRL/CMD key while selecting them (the main category will be also added to the categories if it doesn't already belong to the first list).
 FLEXI_DATE_FORMAT_FLEXI_VERSIONS=%d/%m %H:%M
+FLEXI_DATE_FORMAT_FLEXI_ITEMS=%d/%m/%y %H:%M
 FLEXI_CATEGORIES_MAIN=Set primary
 FLEXICONTENT_ITEM_SUBMISSION_DESC=This menu allows users to submit content in frontend. IMPORTANT! At the moment FLEXIcontent only allows you to submit standard Joomla articles (no extra-fields).
 FLEXI_REVERT=Load version
