--- a/trunk/administrator/language/fr-FR/fr-FR.com_flexicontent.ini
+++ b/trunk/administrator/language/fr-FR/fr-FR.com_flexicontent.ini
@@ -909,6 +909,7 @@ FLEXI_RIGHTS_MANAGEMENT=Gérer les permissions
 FLEXI_RIGHTS_MANAGEMENT_DESC=Cliquez sur la flêche ci-dessus pour afficher le tableau des permissions.
 FLEXI_CATEGORIES_NOTES=La catégorie principale est celle utilisée pour déterminer l'héritage des permissions et l'url rewriting. Pour sélectionner plusieurs catégories maintenez la touche CTRL appuyée (la catégorie principale est systématiquement ajouté aux catégories secondaires).
 FLEXI_DATE_FORMAT_FLEXI_VERSIONS=%d/%m %H:%M
+FLEXI_DATE_FORMAT_FLEXI_ITEMS=%d/%m/%y %H:%M
 FLEXI_CATEGORIES_MAIN=Catégorie principale
 FLEXICONTENT_ITEM_SUBMISSION_DESC=Ce menu permet aux utilisateurs de soumettre des contenus en frontend. IMPORTANT! Actuellement FLEXIcontent ne permet de soumettre que des contenus de type articles (pas de champs custom)
 FLEXI_REVERT=Afficher la version
