--- a/trunk/administrator/language/en-GB/en-GB.com_flexicontent.ini
+++ b/trunk/administrator/language/en-GB/en-GB.com_flexicontent.ini
@@ -944,3 +944,10 @@ FLEXI_SELECT_TYPE_DESC=Select the item type form you wish to display. IMPORTANT!
 FLEXI_CURRENT_VERSION=Current version
 FLEXI_WORKING_VERSION=Working version
 FLEXI_APPROVE_VERSION=Approve version
+FLEXI_VERSION_COMMENT=Version comment
+FLEXI_AUTO_APPROVE=Auto-approve versions
+FLEXI_AUTO_APPROVE_DESC=Disable advanced versioning and auto-approve new created versions so that they are automatically current
+FLEXI_VERSION_PER_PAGE=# versions per page
+FLEXI_VERSION_PER_PAGE_DESC=The number of versions you whish to display per page
+FLEXI_ADD_TOOLTIPS=Add mootools tooltips
+FLEXI_ADD_TOOLTIPS_DESC=Add the mootools tooltips behavior from Joomla to display the nice tooltips in frontend.
